--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <div class="time">November 2022-Present</div>
         <div class="responsibilities">
             <ul>
-                <li>Learned Security Tools: DUO, Trend Micro Suite</li>
+                <li>Learned Security Tools: DUO, Trend Micro Suite, Tenable</li>
                 <li>Reviewed security alerts and verified reports</li>
                 <li>Worked as a team to implement various projects</li>
-                <li>Utilized Tenable to perform network vulnerability scanning and present dashboards</li>
+                <li>Utilized Tenable to perform network vulnerability scanning and present information other parties</li>
             </ul>
         </div>
 
